--- a/styles/patient.css
+++ b/styles/patient.css
@@ -146,7 +146,10 @@ h1{
     display: none;
 }
 
-
+h2{
+    margin: 40px 0;
+    text-align: center;
+}
 @keyframes slant-animate{
     to{
         background-color: #fff;
